force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Phone_Extension__c</fullName>
    <formula>TEXT(CLQ_Program__r.CLQ_Phone_Extension__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Extension</label>
    <type>Text</type>
</CustomField>