force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Phone_Extention_Text__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Phone_Extention_Text__c</fullName>
    <formula>Text(CLQ_ProgTrans_Phone_Extension__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Extention</label>
    <type>Text</type>
</CustomField>