force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Phone_Number__c</fullName>
    <description>Can be deleted one the API mapping is changed to CLQ_Old_Phone_Number__c</description>
    <formula>CLQ_Program__r.CLQ_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XPhone Number</label>
    <type>Text</type>
</CustomField>