force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Place_of_worship_with_childcare__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Place_of_worship_with_childcare__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Child care in places of worship, during religious activities, when children are cared for while at least one parent, guardian, or custodian of each child is participating in such activities and is readily available.</description>
    <inlineHelpText>Child care in places of worship, during religious activities, when children are cared for while at least one parent, guardian, or custodian of each child is participating in such activities and is readily available.</inlineHelpText>
    <label>DEL Place of worship with childcare</label>
    <type>Checkbox</type>
</CustomField>