force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Planned_First_Day_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Planned_First_Day_of_Operation__c</fullName>
    <label>Planned First Day of Operation</label>
    <type>Date</type>
</CustomField>