force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Portal_Application_Update__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Portal_Application_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as a Check when an Application is updated from Portal by the Program&apos;s contact</description>
    <label>Portal Application Update</label>
    <type>Checkbox</type>
</CustomField>