force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Pre_and_School_CC_not_head_start__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Pre_and_School_CC_not_head_start__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Any preschool program or school child program, except a head start program, that is subject to licensure by the ODE.</description>
    <inlineHelpText>Any preschool program or school child program, except a head start program, that is subject to licensure by the ODE.</inlineHelpText>
    <label>Pre and School CC not head start</label>
    <type>Checkbox</type>
</CustomField>