force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Previous_Program_Number__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Previous_Program_Number__c</fullName>
    <label>New Program Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>