force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Program__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program</label>
    <referenceTo>CLQ_Program__c</referenceTo>
    <relationshipName>Program_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>