force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Program_City__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_City__c</fullName>
    <label>Program City</label>
    <length>250</length>
    <type>Text</type>
</CustomField>