force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Program_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Email_Address__c</fullName>
    <formula>CLQ_Program__r.CLQ_Program_Email__c</formula>
    <label>XProgram Email Address</label>
    <type>Text</type>
</CustomField>