force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Program_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Email_ID__c</fullName>
    <description>Used as part of the OOS Update, when its filled out it will change Program email on the Program Object</description>
    <inlineHelpText>Fill this out if you want to update the name of the Program</inlineHelpText>
    <label>Program Email</label>
    <length>250</length>
    <type>Text</type>
</CustomField>