force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Program_License_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_License_Start_Date__c</fullName>
    <formula>CLQ_Program__r.CLQ_License_Issue_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program License Start Date</label>
    <type>Date</type>
</CustomField>