force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Program_License_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_License_Type__c</fullName>
    <formula>TEXT( CLQ_Program__r.CLQ_License_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program License Type</label>
    <type>Text</type>
</CustomField>