force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Program_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Location_Type__c</fullName>
    <description>Where will your program operate?</description>
    <inlineHelpText>Select an option based on where your program will operate?</inlineHelpText>
    <label>Program Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-residential location (Center)</fullName>
            </value>
            <value>
                <fullName>Applicant’s residence (Family Child Care)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>