force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Program_Name_OOS__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Name_OOS__c</fullName>
    <description>Program Name field on OOS Registration layout</description>
    <label>Program Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>