force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Program_Number_Recently_Licenses__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Number_Recently_Licenses__c</fullName>
    <description>Enter the Program Number.  If you own more than one program, list the most recently licensed.</description>
    <inlineHelpText>Enter the Program Number.  If you own more than one program, list the most recently licensed.</inlineHelpText>
    <label>Program Number (Recently Licenses)</label>
    <length>128</length>
    <type>Text</type>
</CustomField>