force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Program_Phone__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Phone__c</fullName>
    <label>Program Phone</label>
    <length>250</length>
    <type>Text</type>
</CustomField>