force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Program_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Record_Type__c</fullName>
    <formula>CLQ_Program__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Record Type</label>
    <type>Text</type>
</CustomField>