force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Program_s_Email__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_s_Email__c</fullName>
    <label>Program&apos;s Email</label>
    <type>Email</type>
</CustomField>