force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Program_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Start_Date__c</fullName>
    <label>Program Start Date</label>
    <type>Date</type>
</CustomField>