force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Program_Street_Address_2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Street_Address_2__c</fullName>
    <description>Can be deleted once the API mapping is changed to CLQ_Old_Program_Street_Address_2__c</description>
    <formula>CLQ_Program__r.CLQ_Street_Address_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XProgram Street Address 2</label>
    <type>Text</type>
</CustomField>