force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Program_StreetAddress_2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_StreetAddress_2__c</fullName>
    <label>Program StreetAddress 2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>