force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Program_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Type_Formula__c</fullName>
    <formula>CLQ_Program__r.CLQ_Program_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Type</label>
    <type>Text</type>
</CustomField>