force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_ProgTrans_County__c.field-meta.xml
<CustomField>
    <fullName>CLQ_ProgTrans_County__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County</label>
    <referenceTo>CLQ_County__c</referenceTo>
    <relationshipName>Program_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>