force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_ProgTrans_Phone__c.field-meta.xml
<CustomField>
    <fullName>CLQ_ProgTrans_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>