force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_ProgTrans_Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>CLQ_ProgTrans_Phone_Extension__c</fullName>
    <label>Phone Extension</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>