force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_ProgTrans_Program_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CLQ_ProgTrans_Program_Email_Address__c</fullName>
    <label>Program Email Address</label>
    <type>Email</type>
</CustomField>