force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_ProgTrans_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>CLQ_ProgTrans_Street_Address__c</fullName>
    <label>Street Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>