force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_ProgTrans_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>CLQ_ProgTrans_Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>