force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Proposed_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Proposed_Open_Date__c</fullName>
    <label>Proposed Open Date</label>
    <type>Date</type>
</CustomField>