force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Provisional_License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Provisional_License_Expiration_Date__c</fullName>
    <formula>CLQ_Program__r.CLQ_License_Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provisional License Expiration Date</label>
    <type>Date</type>
</CustomField>