force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Queue_Name__c</fullName>
    <label>Queue Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>