force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Rating_Confirmed_by_Program__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Rating_Confirmed_by_Program__c</fullName>
    <description>Rating Confirmed by Program at the end of their Registration</description>
    <label>Rating Confirmed by Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>