force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Reactivation_Comments__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Reactivation_Comments__c</fullName>
    <label>Reactivation Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>