force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Reactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Reactivation_Date__c</fullName>
    <label>Approved Reopen Date</label>
    <type>Date</type>
</CustomField>