force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Reactivation_Processed_By__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Reactivation_Processed_By__c</fullName>
    <label>Reactivation Processed By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>