force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Ready_for_Approval2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Ready_for_Approval2__c</fullName>
    <formula>AND(NOT(CONTAINS(RecordType.Name, &quot;SUTQ&quot;)), 
OR(
 AND(OR(CONTAINS(RecordType.Name, &quot;Application&quot;),CONTAINS(RecordType.Name, &quot;Administrator&quot;)), CLQ_Application_Ready_for_Approval__c = True),
 AND(CONTAINS(RecordType.Name, &quot;Location&quot;), CLQ_COL_Ready_for_Approval__c = True),
 AND(CONTAINS(RecordType.Name, &quot;Capacity&quot;), CLQ_COC_Ready_for_Approval__c = True),
 OR(CONTAINS(RecordType.Name, &quot;Continuous&quot;), CONTAINS(RecordType.Name, &quot;Closure&quot;))
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready for Approval</label>
    <type>Checkbox</type>
</CustomField>