force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Ready_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Ready_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Approval</label>
    <type>Checkbox</type>
</CustomField>