force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Reason_Closed__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Reason_Closed__c</fullName>
    <label>Reason Closed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>