force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Recommendation__c</fullName>
    <label>Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Deny</fullName>
            </value>
            <value>
                <fullName>Withdraw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>