force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Record_Created__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Record_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Day Camp in process flows to make updates when a record is created</description>
    <label>Record Created</label>
    <type>Checkbox</type>
</CustomField>