force-app/main/default/objects/CLQ_Program_Transaction__c/fields/clq_recordtypename__c.field-meta.xml
<CustomField>
    <fullName>clq_recordtypename__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>clq_recordtypename</label>
    <type>Text</type>
</CustomField>