force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Registration_Status__c</fullName>
    <label>Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Withdrawn by Provider</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Review in Progress</fullName>
            </value>
            <value>
                <fullName>Under Specialist or Reviewer Review</fullName>
            </value>
            <value>
                <fullName>Closed by System</fullName>
            </value>
            <value>
                <fullName>Closed at Applicant’s Request</fullName>
            </value>
            <value>
                <fullName>Returned for Revision</fullName>
            </value>
            <value>
                <fullName>Under Supervisor or Approver Review</fullName>
            </value>
            <value>
                <fullName>Application Revised</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Licensed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Resubmitted</fullName>
            </value>
            <value>
                <fullName>Under Reviewer&apos;s Review</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Returned to Reviewer</fullName>
            </value>
            <value>
                <fullName>Approver Review in Progress</fullName>
            </value>
            <value>
                <fullName>Under Reviewer Review</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Withdrawn at Applicant&apos;s Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>