force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Registration_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Registration_Status_Date__c</fullName>
    <label>Registration Status Date</label>
    <type>Date</type>
</CustomField>