force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Regulated_by_other_state_departments__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Regulated_by_other_state_departments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Programs that provide child care funded and regulated, or operated and regulated, by state departments, other than the ODJFS or the ODE.</description>
    <inlineHelpText>Programs that provide child care funded and regulated, or operated and regulated, by state departments, other than the ODJFS or the ODE.</inlineHelpText>
    <label>Regulated by other state departments</label>
    <type>Checkbox</type>
</CustomField>