force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Religious_Activities_No_Childcare__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Religious_Activities_No_Childcare__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Religious activities which do not provide child care.</description>
    <inlineHelpText>Religious activities which do not provide child care.</inlineHelpText>
    <label>DEL Religious Activities No Childcare</label>
    <type>Checkbox</type>
</CustomField>