force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Requested_Calculated_Max_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Requested_Calculated_Max_Capacity__c</fullName>
    <label>Requested Calculated Max Capacity</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>