force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Requested_Calculated_Max_Under_2_1_2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Requested_Calculated_Max_Under_2_1_2__c</fullName>
    <label>Requested Calculated Max (Under 2 1/2)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>