force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Requested_New_Capacity_Under_2_5_Yrs__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Requested_New_Capacity_Under_2_5_Yrs__c</fullName>
    <label>Requested New Capacity (Under 2 1/2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>