force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Requested_Reopen_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Requested_Reopen_Date__c</fullName>
    <label>Requested Reopen Date</label>
    <type>Date</type>
</CustomField>