force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Requested_Under_2_5_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Requested_Under_2_5_Capacity__c</fullName>
    <formula>CLQ_Program__r.CLQ_Total_Enrollment_Under_2_5_years__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Capacity (Under 2 1/2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>