force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Requested_Under_2_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Requested_Under_2_Capacity__c</fullName>
    <label>Requested New Capacity (Under 2 Yrs)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>