force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Resubmission_Complete__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Resubmission_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked manually by reviewer when re-submission is complete</description>
    <label>Resubmission Complete</label>
    <type>Checkbox</type>
</CustomField>