force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Reviewer_Missing_Elements__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Reviewer_Missing_Elements__c</fullName>
    <description>OJLS:675</description>
    <label>Reviewer Missing Elements</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>