force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Revision_Field_Changes__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Revision_Field_Changes__c</fullName>
    <description>The field values that changed for this version.</description>
    <label>Revision Field Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>